<resources>
    <string name="app_name">hoom2mm5</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="you">you</string>
    <string name="me">Me</string>
    <string name="your_score">your_score</string>
    <string name="try_again">try_again</string>
    <string name="_100">100</string>
    <string name="calculate">calculate</string>
    <string name="ne">Ne</string>
    <string name="second_name">Second_name</string>
    <string name="yout">You</string>
    <string name="fist_name">fist_name</string>
    <string name="love_colculator">love_colculator</string>
    <string name="start">START</string>
    <string name="it_funs_and_many_more">It Funs and Many More</string>
    <string name="get_starteb">Get Starteb</string>
    <string name="have_a_good_time">Have a good time</string>
    <string name="you_shouid_take_the_tame_to_help_shose">You shouid take the tame to help shose</string>
    <string name="who_need_you">who need you</string>
</resources>