<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.mein.MainFragment">

    <ImageView
        android:background="@drawable/love"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:id="@+id/img_main"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/love_colculator"
        android:id="@+id/tv_main"
        android:textStyle="bold"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@+id/img_main"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="12sp"
        android:textColor="@color/purple_200"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fist_name"
        android:textColor="@color/black"
        android:id="@+id/fist_name"
        android:textStyle="bold"
        android:layout_margin="12sp"
        app:layout_constraintTop_toBottomOf="@+id/tv_main"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/ed_You"
        android:layout_width="370dp"
        android:layout_height="50dp"
        android:layout_margin="13dp"
        android:background="@drawable/editext"
        android:hint="@string/yout"
        android:padding="12sp"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fist_name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/second_name"
        android:textColor="@color/black"
        android:id="@+id/second_name"
        android:textStyle="bold"
        android:layout_margin="12sp"
        app:layout_constraintTop_toBottomOf="@+id/ed_You"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/ed_Me"
        android:layout_width="370dp"
        android:layout_height="50dp"
        android:layout_margin="13dp"
        android:background="@drawable/editext"
        android:hint="@string/ne"
        android:padding="12sp"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/second_name" />

    <Button
        android:background="@drawable/editext"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="23dp"
        android:layout_marginTop="224dp"
        android:text="@string/calculate"
        android:id="@+id/calculate"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_Me" />

    <ImageView
        android:background="@drawable/ttw"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="12sp"/>

    <ImageView
        android:background="@drawable/ttw"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="12sp"/>


</androidx.constraintlayout.widget.ConstraintLayout>