<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.SekondFragment">

    <ImageView
        android:background="@drawable/calculator_love"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:id="@+id/imgf"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:layout_width="200dp"
        android:layout_height="34dp"
        android:text="@string/you"
        android:textColor="@color/black"
        android:id="@+id/tvyou"
        android:textSize="23sp"
        android:gravity="center"
        android:layout_margin="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgf"/>

    <TextView
        android:id="@+id/tv_live"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_margin="12sp"
        android:text="@string/_100"
        android:textColor="@color/black"
        android:gravity="center"
        android:background="@drawable/img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvyou" />

    <TextView
        android:layout_width="200dp"
        android:layout_height="34dp"
        android:text="@string/me"
        android:textColor="@color/black"
        android:id="@+id/tvme"
        android:textSize="23sp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_live"/>

    <TextView
        android:layout_width="200dp"
        android:layout_height="34dp"
        android:layout_margin="12sp"
        app:layout_constraintTop_toBottomOf="@+id/tvme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/your_score"
        android:id="@+id/yourscore"
        android:textStyle="bold"
        android:textSize="23sp"
        android:textColor="@color/purple_200"
        android:gravity="center"/>

    <ImageView
        android:id="@+id/love"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="12sp"
        app:layout_constraintTop_toBottomOf="@+id/yourscore"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/ttw"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_margin="13dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/love"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/editext"
        android:text="@string/try_again"
        android:id="@+id/btn_secont"
        android:textStyle="normal"/>

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="12sp"/>

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="12sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>